--- a/BAKERY site/index.html
+++ b/BAKERY site/index.html
@@ -45,7 +45,7 @@
       <section class="section about" id="about">
         <!-- 見出し -->
         <h2 class="heading">
-          <img src="/img/ttl_about.svg" alt="about" />
+          <img src="./img/ttl_about.svg" alt="about" />
         </h2>
         <!-- 説明文 -->
         <p>
