--- a/BAKERY site/index.html
+++ b/BAKERY site/index.html
@@ -21,14 +21,14 @@
     <header class="header">
       <!-- ロゴマーク -->
       <h1 class="logo">
-        <img src="/img/logo.svg" alt="Cornetto" />
+        <img src="./img/logo.svg" alt="Cornetto" />
       </h1>
     </header>
     <!-- メインコンテンツ -->
     <main class="main">
       <!-- メインイメージ -->
       <figure class="top">
-        <img src="/img/img1.jpg" alt="Cornettoパン" />
+        <img src="./img/img1.jpg" alt="Cornettoパン" />
       </figure>
       <!-- ナビゲーション -->
       <nav class="nav">
@@ -61,7 +61,7 @@
       <section class="section menu" id="menu">
         <!-- 見出し -->
         <h2 class="heading">
-          <img src="/img/ttl_menu.svg" alt="menu" />
+          <img src="./img/ttl_menu.svg" alt="menu" />
         </h2>
         <!-- メニューリスト -->
         <ul class="menu-list">
@@ -77,14 +77,14 @@
       <section class="section photos" id="photos">
         <!-- 見出し -->
         <h2 class="heading">
-          <img src="/img/ttl_photos.svg" alt="photos" />
+          <img src="./img/ttl_photos.svg" alt="photos" />
         </h2>
         <!-- フォトリスト -->
         <ul class="photos-list">
           <li>
             <!-- 写真とキャプション -->
             <figure>
-              <img src="/img/photos_01.jpg" alt="ゆとりのある朝食" />
+              <img src="./img/photos_01.jpg" alt="ゆとりのある朝食" />
               <figcaption>
                 休日の朝には、いつもよりじっくりと選んだパンを食卓に並べてゆとりのある
                 朝食をいただきたいものです。
@@ -93,7 +93,7 @@
           </li>
           <li>
             <figure>
-              <img src="/img/photos_02.jpg" alt="季節のピザパン" />
+              <img src="./img/photos_02.jpg" alt="季節のピザパン" />
               <figcaption>
                 当店人気の”季節のピザパン”。夏の人気メニューはズッキーニとパプリカです。
               </figcaption>
@@ -106,7 +106,7 @@
       <section class="section access" id="access">
         <!-- 見出し -->
         <h2 class="heading">
-          <img src="/img/ttl_access.svg" alt="access" />
+          <img src="./img/ttl_access.svg" alt="access" />
         </h2>
         <!-- 左右横並び -->
         <div class="access-row">
@@ -119,7 +119,7 @@
           </address>
           <!-- 右側 -->
           <figure class="ccess-map">
-            <img src="/img/map.png" alt="店頭周辺地図" />
+            <img src="./img/map.png" alt="店頭周辺地図" />
           </figure>
         </div>
       </section>
@@ -132,7 +132,7 @@
       <div class="footer-container">
         <!-- フッターロゴ（左側） -->
         <p class="footer-logo">
-          <img src="/img/logo_w.svg" alt="Cornetto" />
+          <img src="./img/logo_w.svg" alt="Cornetto" />
         </p>
         <!-- フッターその他の要素 （右側） -->
         <div class="footer-body">
